--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -6,5 +6,8 @@
     "signIn": "Entrar",
     "register": "Registrar",
     "skip": "Omitir"
-  }
+  },
+ "signin":{
+   "newUser": "Nuevo usuario"
+ }
 }
