creacion de pantallas buscar vuelos y vuelos encontrados

--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -15,5 +15,9 @@
    "password": "Contraseña",
    "nationality": "Nacionalidad",
    "register": "Registrarme"
+ },
+ "search":{
+   "searchFlight": "Buscar Vuelo",
+   "searchFli": "Buscar"
  }
 }
