--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -4,7 +4,7 @@
     "email": "Email",
     "password": "Password",
     "signIn": "Login",
-    "register": "Register",
+    "register": "Sign Up",
     "skip": "Skip"
   },
   "signin":{
@@ -14,6 +14,10 @@
     "email": "Email",
     "password": "Password",
     "nationality": "Nationality",
-    "register": "Register"
+    "register": "Sign Up"
+  },
+  "search":{
+    "searchFlight": "Search Flight",
+    "searchFli": "Search"
   }
 }
